// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProfileModal > match snapshot 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-vrrzze"
    >
      <div
        class="ant-modal-mask ant-fade-appear ant-fade-appear-start ant-fade"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-vrrzze hashId ant-web3-connect-button-profile-modal ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
        >
          <div
            style="outline: none;"
            tabindex="0"
          >
            <div
              class="ant-modal-content"
            >
              <button
                aria-label="Close"
                class="ant-modal-close"
                type="button"
              >
                <span
                  aria-label="Close"
                  class="ant-modal-close-x"
                >
                  <span
                    aria-label="close"
                    class="anticon anticon-close ant-modal-close-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close"
                      fill="currentColor"
                      fill-rule="evenodd"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
              <div
                class="ant-modal-body"
                style="text-align: center;"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-vrrzze ant-space-vertical ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                >
                  <div
                    class="ant-space-item"
                  >
                    <span
                      class="ant-avatar ant-avatar-circle ant-avatar-image css-dev-only-do-not-override-vrrzze"
                    >
                      <img
                        src="https://mdn.alipayobjects.com/huamei_mutawc/afts/img/A*9jfLS41kn00AAAAAAAAAAAAADlrGAQ/original"
                      />
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="ant-web3-connect-button-profile-modal-name hashId"
                    >
                      wanderingearth.eth
                    </div>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <span
                      class="ant-typography ant-typography-secondary ant-web3-address css-dev-only-do-not-override-vrrzze css-dev-only-do-not-override-vrrzze"
                    >
                      <span
                        aria-describedby="test-id"
                      >
                        0x21CDf0974d53a6e96eF05d7B324a9803735fFd3B
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="ant-modal-footer"
              >
                <div
                  class="ant-web3-connect-button-profile-modal-footer hashId"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-vrrzze ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                    type="button"
                  >
                    <span>
                      Copy Address
                    </span>
                  </button>
                  <button
                    class="ant-btn css-dev-only-do-not-override-vrrzze ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                    type="button"
                  >
                    <span>
                      Disconnect
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ProfileModal > match snapshot without name 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-vrrzze"
    >
      <div
        class="ant-modal-mask ant-fade-appear ant-fade-appear-start ant-fade"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-vrrzze hashId ant-web3-connect-button-profile-modal ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
        >
          <div
            style="outline: none;"
            tabindex="0"
          >
            <div
              class="ant-modal-content"
            >
              <button
                aria-label="Close"
                class="ant-modal-close"
                type="button"
              >
                <span
                  aria-label="Close"
                  class="ant-modal-close-x"
                >
                  <span
                    aria-label="close"
                    class="anticon anticon-close ant-modal-close-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close"
                      fill="currentColor"
                      fill-rule="evenodd"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
              <div
                class="ant-modal-body"
                style="text-align: center;"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-vrrzze ant-space-vertical ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                >
                  <div
                    class="ant-space-item"
                  >
                    <span
                      class="ant-avatar ant-avatar-circle ant-avatar-image css-dev-only-do-not-override-vrrzze"
                    >
                      <img
                        src="https://mdn.alipayobjects.com/huamei_mutawc/afts/img/A*9jfLS41kn00AAAAAAAAAAAAADlrGAQ/original"
                      />
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <span
                      class="ant-typography ant-web3-address css-dev-only-do-not-override-vrrzze css-dev-only-do-not-override-vrrzze"
                    >
                      <span
                        aria-describedby="test-id"
                      >
                        0x21CDf0974d53a6e96eF05d7B324a9803735fFd3B
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="ant-modal-footer"
              >
                <div
                  class="ant-web3-connect-button-profile-modal-footer hashId"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-vrrzze ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                    type="button"
                  >
                    <span>
                      Copy Address
                    </span>
                  </button>
                  <button
                    class="ant-btn css-dev-only-do-not-override-vrrzze ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                    type="button"
                  >
                    <span>
                      Disconnect
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
